setting proper gitignore for experiments

--- a/projects/MLRecap/.gitignore
+++ b/projects/MLRecap/.gitignore
@@ -1,3 +1,16 @@
+# Custom
+local/
+tmp/
+.vscode/
+
+
+
+# Python artifacts anywhere
+**/__pycache__/
+**/*.pyc
+**/*.pyo
+**/.ipynb_checkpoints/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
