--- a/projects/MLRecap/pixi.toml
+++ b/projects/MLRecap/pixi.toml
@@ -3,9 +3,8 @@ name = "MLRecap"
 version = "0.1.0"
 authors = ["Vladimir-Ershov <106324080+Vladimir-Ershov@users.noreply.github.com>"]
 channels = ["pytorch", "nvidia", "conda-forge"]
-platforms = ["linux-64"]
-# channel-priority = "disabled"
-channel-priority = "strict" 
+platforms = ["linux-64", "osx-64", "osx-arm64"]
+channel-priority = "strict"
 
 [dependencies]
 ipykernel = ">=6.30.1,<7"
@@ -15,20 +14,32 @@ skorch = ">=1.2.0,<2"
 
 [feature.pytorch]
 channels = ["pytorch", "nvidia", "conda-forge"]
- #channel-priority = "disabled"
-channel-priority = "strict" 
+channel-priority = "strict"
 
 [feature.pytorch.dependencies]
-python = "3.9.*"                                # Change to 3.9
-pytorch = { version = "2.5.*", channel = "pytorch", build = "*cuda12.4*" }
-torchvision = { version = "*", channel = "pytorch", build = "*cu124*" }
-torchaudio = { version = "*", channel = "pytorch" }
-pytorch-cuda = "12.4.*"                         # CUDA 12.4 for latest PyTorch
+python = "3.9.*"
+numpy = "<2"
 ipykernel = "*"
 seaborn = "*"
 scikit-learn = "*"
-# detecto = "*"
 pillow = "*"
+psutil = "*"
+
+# Linux CUDA dependencies
+[feature.pytorch.target.linux-64.dependencies]
+pytorch = { version = "2.5.*", channel = "pytorch", build = "*cuda12.4*" }
+torchvision = { version = "*", channel = "pytorch", build = "*cu124*" }
+torchaudio = { version = "*", channel = "pytorch" }
+pytorch-cuda = "12.4.*"
+
+# macOS CPU dependencies
+[feature.pytorch.target.osx-64.dependencies]
+pytorch = { version = ">=2.0,<3", channel = "pytorch" }
+torchvision = { version = "*", channel = "pytorch" }
+
+[feature.pytorch.target.osx-arm64.dependencies]
+pytorch = { version = ">=2.0,<3", channel = "pytorch" }
+torchvision = { version = "*", channel = "pytorch" }
 
 [environments]
 pytorch = { features = ["pytorch"], no-default-feature = true }
