--- a/projects/MLRecap/pixi.toml
+++ b/projects/MLRecap/pixi.toml
@@ -14,6 +14,8 @@ skorch = ">=1.2.0,<2"
 kaggle = ">=1.7.4.5,<2"
 opendatasets = ">=0.1.22,<0.2"
 tensorboard = ">=2.20.0,<3"
+gymnasium = "*"
+pygame = "*"
 
 [feature.pytorch]
 channels = ["pytorch", "nvidia", "conda-forge"]
@@ -30,6 +32,8 @@ psutil = "*"
 pysoundfile = "*"
 libsndfile = "*"
 sox = "*"
+gymnasium = "*"
+pygame = "*"
 tensorboard = ">=2.20.0,<3"
 
 # Linux CUDA dependencies
@@ -50,8 +54,8 @@ pytorch = { version = ">=2.0,<3", channel = "pytorch" }
 torchvision = { version = "*", channel = "pytorch" }
 
 [feature.pytorch.pypi-dependencies]
-opencv-python = ">=4.11.0.86, <5"
-wandb = ">=0.22.1, <0.23"
+opencv-python = ">=4.11.0.86,<5"
+wandb = ">=0.22.1,<0.23"
 
 [environments]
 pytorch = { features = ["pytorch"], no-default-feature = true }
